cmake_minimum_required(VERSION 3.23)
project(c__11)

set(CMAKE_CXX_STANDARD 14)

add_executable(c__11
        exception.cpp
        file_exp.cpp
        friend.cpp
        inherence.cpp
        operator.cpp
        STL.cpp
        tempCodeRunnerFile.cpp
        template.cpp
        virtualfunc.cpp)
